# auto-aim

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: ros_ci.yml
armor_detector/: CMakeLists.txt  README.md  package.xml
armor_detector/include/armor_detector/: armor.hpp  ba_solver.hpp  detector.hpp  detector_node.hpp  graph_optimizer.hpp  light_corner_corrector.hpp  number_classifier.hpp  pnp_solver.hpp  thread_pool.hpp
armor_detector/model/: label.txt
armor_detector/src/: ba_solver.cpp  detector.cpp  detector_node.cpp  graph_optimizer.cpp  light_corner_corrector.cpp  number_classifier.cpp  pnp_solver.cpp
armor_detector/test/: test_node_startup.cpp  test_number_cls.cpp
armor_tracker/: CMakeLists.txt  README.md  package.xml
armor_tracker/include/armor_tracker/: extended_kalman_filter.hpp  tracker.hpp  tracker_manager.hpp  tracker_node.hpp  types.hpp
armor_tracker/src/: extended_kalman_filter.cpp  tracker.cpp  tracker_manager.cpp  tracker_node.cpp
auto_aim_interfaces/: CMakeLists.txt  package.xml
auto_aim_interfaces/msg/: Armor.msg  Armors.msg  DebugArmor.msg  DebugLight.msg  Firecontrol.msg  Rune.msg  RuneTarget.msg  Target.msg  TrackerInfo.msg
auto_aim_interfaces/srv/: SetMode.srv
ballistic/: CMakeLists.txt  package.xml
ballistic/include/ballistic/: ballistic.hpp  ballistic_node.hpp
ballistic/src/: ballistic.cpp  ballistic_node.cpp
ballistic_calculation/: CMakeLists.txt  package.xml
ballistic_calculation/include/ballistic_calculation/: ballistic_calculation.hpp  ballistic_node.hpp
ballistic_calculation/src/: ballistic_calculation.cpp  ballistic_node.cpp
rm_auto_aim/: CMakeLists.txt  package.xml
rune_ballistic/: CMakeLists.txt  package.xml
rune_ballistic/include/rune_ballistic/: rune_ballistic_calculation.hpp  rune_ballistic_node.hpp
rune_ballistic/src/: rune_ballistic_calculation.cpp  rune_ballistic_node.cpp
rune_detector/: CMakeLists.txt  README.md  package.xml
rune_detector/include/rune_detector/: rune_detector.hpp  rune_detector_node.hpp  types.hpp
rune_detector/src/: rune_detector.cpp  rune_detector_node.cpp
rune_detector/test/: test_detector.cpp  test_node_startup.cpp
rune_solver/: CMakeLists.txt  README.md  package.xml
rune_solver/include/rune_solver/: curve_fitter.hpp  extended_kalman_filter.hpp  motion_model.hpp  pnp_solver.hpp  rune_solver.hpp  rune_solver_node.hpp  types.hpp
rune_solver/src/: curve_fitter.cpp  pnp_solver.cpp  rune_solver.cpp  rune_solver_node.cpp
rune_solver/test/: test_node_startup.cpp
